# robot_description

./: CMakeLists.txt  README.md  first_map.pgm  package.xml
config/: joint_names_urdf meshed.SLDASM.yaml
launch/: display.launch  gazebo.launch  rviz.launch  testbot.launch
meshes/: b_wheel_link.STL  back_link.STL  back_rotate.STL  back_wheel.STL  base_link.STL  base_link.stl  f_wheel_link.STL  front_link.STL  front_rotate.STL  front_wheel.STL  imu_link.STL  left.stl  left_link.STL  lidar.stl  lidar_link.STL  right.stl  right_link.STL
rviz/: AGV.rviz  slam.rviz
urdf/: AGV.gv  AGV.urdf  model.urdf.xacro  robot.urdf  robot_description.gv  robot_practice.urdf  robot_practice.urdf.xacro  testbot.urdf  testbot2.urdf  urdf meshed.SLDASM.csv  urdf02.urdf  urdf2.urdf
